fix locationInVietnam
Error: selection out of screen

--- a/project_A_intelliJ/src/main/resources/static/assets/css/style.css
+++ b/project_A_intelliJ/src/main/resources/static/assets/css/style.css
@@ -5280,3 +5280,8 @@ a.shipping-calculator-button:hover {
 .order-history .element-right p {
     font-size: 16px;
 }
+
+.locationInVietnam .nice-select .list {
+    max-height: 200px; /* Adjust as needed */
+    overflow-y: auto;
+}
